update base64 library from BASE64Encoder and BASE64Decoder(deprecation) to Base64.