@@ -1,9 +1,12 @@
 package com.qiniu.util;
 
+import com.qiniu.config.PropertiesFile;
 import org.junit.Test;
 import sun.misc.BASE64Decoder;
 
 import javax.crypto.spec.SecretKeySpec;
+import java.io.BufferedWriter;
+import java.io.FileWriter;
 import java.io.IOException;
 import java.util.List;
 import java.util.Map;
@@ -37,12 +40,25 @@ public class ParamsUtilsTest {
 
     @Test
     public void testAccountConfig() throws Exception {
-        BASE64Decoder decoder = new BASE64Decoder();
-        Map<String, String> map = ParamsUtils.toParamsMap(FileUtils.realPathWithUserHome("~" + FileUtils.pathSeparator + ".qsuits.account"));
+        java.util.Base64.Decoder decoder = java.util.Base64.getDecoder();
+        String accountFile = FileUtils.realPathWithUserHome("~" + FileUtils.pathSeparator + ".qsuits.account");
+        Map<String, String> map = ParamsUtils.toParamsMap(accountFile);
         for (Map.Entry<String, String> entry : map.entrySet()) {
-            String account = entry.getKey().split("-")[0];
-            System.out.print(entry.getKey() + "\t" + entry.getValue());
-            System.out.println("\t" + new String(decoder.decodeBuffer(entry.getValue().substring(8))));
+            if (entry.getKey().endsWith("id") || entry.getKey().endsWith("secret")) {
+                System.out.println(entry.getKey() + "\t" + new String(decoder.decode((entry.getValue().substring(8)))));
+            }
         }
+        PropertiesFile propertiesFile = new PropertiesFile("resources/.application.properties");
+        String accessKey = propertiesFile.getValue("ak");
+        String secretKey = propertiesFile.getValue("sk");
+        java.util.Base64.Encoder encoder = java.util.Base64.getEncoder();
+        BufferedWriter writer = new BufferedWriter(new FileWriter(accountFile, true));
+        writer.write("wbh2-qiniu-id=" + EncryptUtils.getRandomString(8) +
+                new String(encoder.encode(accessKey.getBytes())));
+        writer.newLine();
+        writer.write("wbh2-qiniu-secret=" + EncryptUtils.getRandomString(8) +
+                new String(encoder.encode(secretKey.getBytes())));
+        writer.newLine();
+        writer.close();
     }
 }
